--- a/dinner.html
+++ b/dinner.html
@@ -5,31 +5,31 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Dinner menu | Demo1</title>
     <meta name="description" content="Demo of starter1 custom Vuepress theme">
-    <link rel="stylesheet" href="/assets/web/assets/mobirise-icons/mobirise-icons.css">
-  <link rel="stylesheet" href="/assets/tether/tether.min.css">
-  <link rel="stylesheet" href="/assets/soundcloud-plugin/style.css">
-  <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap-grid.min.css">
-  <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="/assets/dropdown/css/style.css">
-  <link rel="stylesheet" href="/assets/socicon/css/styles.css">
-  <link rel="stylesheet" href="/assets/theme/css/style.css">
-  <link rel="stylesheet" href="/assets/mobirise/css/mbr-additional.css">
-  <script src="/assets/web/assets/jquery/jquery.min.js"></script>
-  <script src="/assets/popper/popper.min.js"></script>
-  <script src="/assets/tether/tether.min.js"></script>
-  <script src="/assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="/assets/smoothscroll/smooth-scroll.js"></script>
-  <script src="/assets/dropdown/js/script.min.js"></script>
-  <script src="/assets/touchswipe/jquery.touch-swipe.min.js"></script>
-  <script src="/assets/parallax/jarallax.min.js"></script>
-  <script src="/assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
+    <link rel="stylesheet" href="/vuepress/assets/web/assets/mobirise-icons/mobirise-icons.css">
+  <link rel="stylesheet" href="/vuepress/assets/tether/tether.min.css">
+  <link rel="stylesheet" href="/vuepress/assets/soundcloud-plugin/style.css">
+  <link rel="stylesheet" href="/vuepress/assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/vuepress/assets/bootstrap/css/bootstrap-grid.min.css">
+  <link rel="stylesheet" href="/vuepress/assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="/vuepress/assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="/vuepress/assets/socicon/css/styles.css">
+  <link rel="stylesheet" href="/vuepress/assets/theme/css/style.css">
+  <link rel="stylesheet" href="/vuepress/assets/mobirise/css/mbr-additional.css">
+  <script src="/vuepress/assets/web/assets/jquery/jquery.min.js"></script>
+  <script src="/vuepress/assets/popper/popper.min.js"></script>
+  <script src="/vuepress/assets/tether/tether.min.js"></script>
+  <script src="/vuepress/assets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="/vuepress/assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="/vuepress/assets/dropdown/js/script.min.js"></script>
+  <script src="/vuepress/assets/touchswipe/jquery.touch-swipe.min.js"></script>
+  <script src="/vuepress/assets/parallax/jarallax.min.js"></script>
+  <script src="/vuepress/assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
     
-    <link rel="preload" href="/assets/css/0.styles.bd9d00bc.css" as="style"><link rel="preload" href="/assets/js/app.9754d9b3.js" as="script"><link rel="preload" href="/assets/js/9.2712d1ce.js" as="script"><link rel="prefetch" href="/assets/js/10.d0d4aed6.js"><link rel="prefetch" href="/assets/js/11.33bba459.js"><link rel="prefetch" href="/assets/js/2.1107789b.js"><link rel="prefetch" href="/assets/js/3.e2d11677.js"><link rel="prefetch" href="/assets/js/4.7623a583.js"><link rel="prefetch" href="/assets/js/5.398a58ba.js"><link rel="prefetch" href="/assets/js/6.9265ba72.js"><link rel="prefetch" href="/assets/js/7.ae37b51a.js"><link rel="prefetch" href="/assets/js/8.9e1287ad.js">
-    <link rel="stylesheet" href="/assets/css/0.styles.bd9d00bc.css">
+    <link rel="preload" href="/vuepress/assets/css/0.styles.bd9d00bc.css" as="style"><link rel="preload" href="/vuepress/assets/js/app.5c122ead.js" as="script"><link rel="preload" href="/vuepress/assets/js/9.2712d1ce.js" as="script"><link rel="prefetch" href="/vuepress/assets/js/10.d0d4aed6.js"><link rel="prefetch" href="/vuepress/assets/js/11.33bba459.js"><link rel="prefetch" href="/vuepress/assets/js/2.1107789b.js"><link rel="prefetch" href="/vuepress/assets/js/3.e2d11677.js"><link rel="prefetch" href="/vuepress/assets/js/4.7623a583.js"><link rel="prefetch" href="/vuepress/assets/js/5.398a58ba.js"><link rel="prefetch" href="/vuepress/assets/js/6.9265ba72.js"><link rel="prefetch" href="/vuepress/assets/js/7.ae37b51a.js"><link rel="prefetch" href="/vuepress/assets/js/8.9e1287ad.js">
+    <link rel="stylesheet" href="/vuepress/assets/css/0.styles.bd9d00bc.css">
   </head>
   <body>
     <div id="app" data-server-rendered="true"><div><div class="content custom"><h1 id="dinner-menu"><a href="#dinner-menu" aria-hidden="true" class="header-anchor">#</a> Dinner menu</h1></div></div></div>
-    <script src="/assets/js/app.9754d9b3.js" defer></script><script src="/assets/js/9.2712d1ce.js" defer></script>
+    <script src="/vuepress/assets/js/app.5c122ead.js" defer></script><script src="/vuepress/assets/js/9.2712d1ce.js" defer></script>
   </body>
 </html>
