--- a/index.html
+++ b/index.html
@@ -5,28 +5,28 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Demo1</title>
     <meta name="description" content="Demo of starter1 custom Vuepress theme">
-    <link rel="stylesheet" href="/assets/web/assets/mobirise-icons/mobirise-icons.css">
-  <link rel="stylesheet" href="/assets/tether/tether.min.css">
-  <link rel="stylesheet" href="/assets/soundcloud-plugin/style.css">
-  <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap-grid.min.css">
-  <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="/assets/dropdown/css/style.css">
-  <link rel="stylesheet" href="/assets/socicon/css/styles.css">
-  <link rel="stylesheet" href="/assets/theme/css/style.css">
-  <link rel="stylesheet" href="/assets/mobirise/css/mbr-additional.css">
-  <script src="/assets/web/assets/jquery/jquery.min.js"></script>
-  <script src="/assets/popper/popper.min.js"></script>
-  <script src="/assets/tether/tether.min.js"></script>
-  <script src="/assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="/assets/smoothscroll/smooth-scroll.js"></script>
-  <script src="/assets/dropdown/js/script.min.js"></script>
-  <script src="/assets/touchswipe/jquery.touch-swipe.min.js"></script>
-  <script src="/assets/parallax/jarallax.min.js"></script>
-  <script src="/assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
+    <link rel="stylesheet" href="/vuepress/assets/web/assets/mobirise-icons/mobirise-icons.css">
+  <link rel="stylesheet" href="/vuepress/assets/tether/tether.min.css">
+  <link rel="stylesheet" href="/vuepress/assets/soundcloud-plugin/style.css">
+  <link rel="stylesheet" href="/vuepress/assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/vuepress/assets/bootstrap/css/bootstrap-grid.min.css">
+  <link rel="stylesheet" href="/vuepress/assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="/vuepress/assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="/vuepress/assets/socicon/css/styles.css">
+  <link rel="stylesheet" href="/vuepress/assets/theme/css/style.css">
+  <link rel="stylesheet" href="/vuepress/assets/mobirise/css/mbr-additional.css">
+  <script src="/vuepress/assets/web/assets/jquery/jquery.min.js"></script>
+  <script src="/vuepress/assets/popper/popper.min.js"></script>
+  <script src="/vuepress/assets/tether/tether.min.js"></script>
+  <script src="/vuepress/assets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="/vuepress/assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="/vuepress/assets/dropdown/js/script.min.js"></script>
+  <script src="/vuepress/assets/touchswipe/jquery.touch-swipe.min.js"></script>
+  <script src="/vuepress/assets/parallax/jarallax.min.js"></script>
+  <script src="/vuepress/assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
     
-    <link rel="preload" href="/assets/css/0.styles.bd9d00bc.css" as="style"><link rel="preload" href="/assets/js/app.9754d9b3.js" as="script"><link rel="preload" href="/assets/js/8.9e1287ad.js" as="script"><link rel="preload" href="/assets/js/7.ae37b51a.js" as="script"><link rel="preload" href="/assets/js/4.7623a583.js" as="script"><link rel="preload" href="/assets/js/6.9265ba72.js" as="script"><link rel="preload" href="/assets/js/5.398a58ba.js" as="script"><link rel="preload" href="/assets/js/3.e2d11677.js" as="script"><link rel="prefetch" href="/assets/js/10.d0d4aed6.js"><link rel="prefetch" href="/assets/js/11.33bba459.js"><link rel="prefetch" href="/assets/js/2.1107789b.js"><link rel="prefetch" href="/assets/js/9.2712d1ce.js">
-    <link rel="stylesheet" href="/assets/css/0.styles.bd9d00bc.css">
+    <link rel="preload" href="/vuepress/assets/css/0.styles.bd9d00bc.css" as="style"><link rel="preload" href="/vuepress/assets/js/app.5c122ead.js" as="script"><link rel="preload" href="/vuepress/assets/js/8.9e1287ad.js" as="script"><link rel="preload" href="/vuepress/assets/js/7.ae37b51a.js" as="script"><link rel="preload" href="/vuepress/assets/js/4.7623a583.js" as="script"><link rel="preload" href="/vuepress/assets/js/6.9265ba72.js" as="script"><link rel="preload" href="/vuepress/assets/js/5.398a58ba.js" as="script"><link rel="preload" href="/vuepress/assets/js/3.e2d11677.js" as="script"><link rel="prefetch" href="/vuepress/assets/js/10.d0d4aed6.js"><link rel="prefetch" href="/vuepress/assets/js/11.33bba459.js"><link rel="prefetch" href="/vuepress/assets/js/2.1107789b.js"><link rel="prefetch" href="/vuepress/assets/js/9.2712d1ce.js">
+    <link rel="stylesheet" href="/vuepress/assets/css/0.styles.bd9d00bc.css">
   </head>
   <body>
     <div id="app" data-server-rendered="true"><div><div class="content custom"><div><section once="menu" id="menu1-0" class="menu cid-qTkzRZLJNu"><nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top navbar-toggleable-sm"><button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler navbar-toggler-right"><div class="hamburger"><span></span> <span></span> <span></span> <span></span></div></button> <div class="menu-logo"><div class="navbar-brand"><span class="navbar-logo"><a href="https://mobirise.com"><img src="assets/images/logo2.png" alt="Mobirise" style="height: 3.8rem;"></a></span> <span class="navbar-caption-wrap"><a href="https://mobirise.com" class="navbar-caption text-white display-4">
@@ -75,6 +75,6 @@
                 </h5> <p class="mbr-text"><a href="https://mobirise.com/" class="text-primary">Website builder</a> <br><a href="https://mobirise.com/mobirise-free-win.zip" class="text-primary">Download for Windows</a> <br><a href="https://mobirise.com/mobirise-free-mac.zip" class="text-primary">Download for Mac</a></p></div></div> <div class="footer-lower"><div class="media-container-row"><div class="col-sm-12"><hr></div></div> <div class="media-container-row mbr-white"><div class="col-sm-6 copyright"><p class="mbr-text mbr-fonts-style display-7">
                         © Copyright 2017 Mobirise - All Rights Reserved
                     </p></div> <div class="col-md-6"><div class="social-list align-right"><div class="soc-item"><a href="https://twitter.com/mobirise" target="_blank"><span class="socicon-twitter socicon mbr-iconfont mbr-iconfont-social"></span></a></div> <div class="soc-item"><a href="https://www.facebook.com/pages/Mobirise/1616226671953247" target="_blank"><span class="socicon-facebook socicon mbr-iconfont mbr-iconfont-social"></span></a></div> <div class="soc-item"><a href="https://www.youtube.com/c/mobirise" target="_blank"><span class="socicon-youtube socicon mbr-iconfont mbr-iconfont-social"></span></a></div> <div class="soc-item"><a href="https://instagram.com/mobirise" target="_blank"><span class="socicon-instagram socicon mbr-iconfont mbr-iconfont-social"></span></a></div> <div class="soc-item"><a href="https://plus.google.com/u/0/+Mobirise" target="_blank"><span class="socicon-googleplus socicon mbr-iconfont mbr-iconfont-social"></span></a></div> <div class="soc-item"><a href="https://www.behance.net/Mobirise" target="_blank"><span class="socicon-behance socicon mbr-iconfont mbr-iconfont-social"></span></a></div></div></div></div></div></div></section></div></div></div></div>
-    <script src="/assets/js/app.9754d9b3.js" defer></script><script src="/assets/js/8.9e1287ad.js" defer></script><script src="/assets/js/7.ae37b51a.js" defer></script><script src="/assets/js/4.7623a583.js" defer></script><script src="/assets/js/6.9265ba72.js" defer></script><script src="/assets/js/5.398a58ba.js" defer></script><script src="/assets/js/3.e2d11677.js" defer></script>
+    <script src="/vuepress/assets/js/app.5c122ead.js" defer></script><script src="/vuepress/assets/js/8.9e1287ad.js" defer></script><script src="/vuepress/assets/js/7.ae37b51a.js" defer></script><script src="/vuepress/assets/js/4.7623a583.js" defer></script><script src="/vuepress/assets/js/6.9265ba72.js" defer></script><script src="/vuepress/assets/js/5.398a58ba.js" defer></script><script src="/vuepress/assets/js/3.e2d11677.js" defer></script>
   </body>
 </html>
